--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 25vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,4 +40,12 @@
 .saludo3{
   background-color: #61dafb;
   color: red;
+}
+
+.Lista-usuarios{
+  display: flex;  
+}
+
+.Lista-usuario{
+  flex: 1;  
 }
