--- a/src/App.css
+++ b/src/App.css
@@ -82,3 +82,9 @@ input, button, submit, select{
   font-size: 12px;
   padding: 12px;
 }
+
+.paginacionctl{
+  color: red;
+  font-size: 16px;
+  border-radius: 8px;
+}
